// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericToggleTest renders description content is JSX.Element 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        test name
      </div>
      <mock-styledtogglebase
        arialabel="test name"
        checked="true"
        classname="toggle"
        id="test-id-1"
        offtext="Off"
        ontext="On"
      />
    </div>
    <div
      class="toggleDescription"
    >
      <h1>
        hello
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenericToggleTest renders description content is string 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        test name
      </div>
      <mock-styledtogglebase
        arialabel="test name"
        checked="true"
        classname="toggle"
        id="test-id-1"
        offtext="Off"
        ontext="On"
      />
    </div>
    <div
      class="toggleDescription"
    >
      test string description
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenericToggleTest renders toggle enable = false 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        test name
      </div>
      <mock-styledtogglebase
        arialabel="test name"
        checked="false"
        classname="toggle"
        id="test-id-1"
        offtext="Off"
        ontext="On"
      />
    </div>
    <div
      class="toggleDescription"
    >
      test description
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenericToggleTest renders toggle enable = true 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        test name
      </div>
      <mock-styledtogglebase
        arialabel="test name"
        checked="true"
        classname="toggle"
        id="test-id-1"
        offtext="Off"
        ontext="On"
      />
    </div>
    <div
      class="toggleDescription"
    >
      test description
    </div>
  </div>
</DocumentFragment>
`;
